<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">社区互助老年公寓</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="hint_account">请输入账号名称</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登入社区</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="register_account">我要入住</string>
    <string name="remember_account">记住账号</string>
    <string name="app_declare">社区老年公寓欢迎你！</string>
    <string name="set_account">设置账号：</string>
    <string name="set_password">设置密码：</string>
    <string name="password_confirm">确认密码：</string>
    <string name="hint_set_password">密码长度不少于8位</string>
    <string name="hint_set_password_confirm">再次输入密码</string>
    <string name="register">入住社区</string>
    <string name="account_info">帐号信息</string>

    <string name="service">服务</string>
    <string name="recommend">推荐</string>
    <string name="search">搜索</string>
    <string name="my">我的</string>
    <string name="exit_twice">再按一次退出程序</string>
    <string name="none">无</string>
    <string name="post_activity">创建活动</string>
    <string name="message_center">消息中心</string>
    <string name="confirm_create">确认创建</string>
    <string name="img_from_camera">相机拍摄</string>
    <string name="img_from_album">手机相册</string>
    <string name="what_is_time_bank">什么是时间银行？</string>
    <string name="time_bank_explain">用户将参与公益服务的时间存进时间银行，当自己需要他人帮助时可以从中支取“被服务时间”。</string>
    <string name="what_is_time_coins">什么是时间币？</string>
    <string name="time_coins_explain">时间币是社区老年公寓的通用货币，你可以用它来换取礼品，或得到别人的帮助。指用户在单位时间内运用智慧和劳动创造价值的基本计量单位，是时间货币体系中的基础计量单位之一。</string>
    <string name="contact_community_manager">请联系社区管理员。</string>
    <string name="about_time_coins">关于时间币</string>
    <string name="acquire_time_coins">获得时间币</string>
    <string name="activity_details">活动详情</string>
    <string name="set_address">集合地点：</string>
    <string name="close_time">截止报名：</string>
    <string name="end_time">结束时间：</string>
    <string name="begin_time">开始时间：</string>
    <string name="evaluate_now">立即评价</string>
    <string name="function_not_open">功能暂未开放！</string>
    <string name="create_activity">创建活动</string>
    <string name="cant_join_to_create">当前活动已不能参加了，期待下一次吧。或者你也可以去创建一个这样的活动！</string>
    <string name="fill_up_to_create">当前参与活动人数已满，不能再报名了，你可以去创建一个这样的活动！</string>
    <string name="have_evaluated">已评论！</string>
    <string name="have_joined_evaluate">已参与评论！</string>
    <string name="no_premission_to_evaluate">未参与，无法评价</string>
    <string name="postuser_have_joined">活动发起人默认已加入该活动！</string>
    <string name="cancel_joined">你已被活动发起者移出该活动，如需继续参与，请联系活动发起人或社区管理员！</string>
    <string name="have_joined">你已申请参与该活动，不能再次申请加入。请留意消息，在活动开始前会提醒你参加！</string>
    <string name="select_duty">请选择一个活动职责申请加入</string>
    <string name="cant_join">无法加入，请联系活动发起人或社区管理员！</string>
    
    <string name="hint">提示</string>
    <string name="sure">确定</string>
    
    <string name="ERROR_NO_NETWORK">无法连接到网络，请尝试打开网络后重新操作！</string>
    <string name="ERROR_CONNECT_NETWORK">无法连接到服务器！</string>
    <string name="ERROR_EMPTY_LOGIN">用户名或密码不能为空！</string>
    <string name="ERROR_RESPONSE_LOGIN">用户名或密码错误！</string>
    <string name="ERROR_OTHERS">未知错误！</string>
    <string name="NONE">无</string>
    <string name="ERROR_SEND_FAILED">发送失败！</string> 
	<string name="ERROR_REGISTER_INFO">注册用户已存在！</string>
    <string name="REGISTER_SUCCESS">用户注册成功！</string>
</resources>
