<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main" >

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60.0dip"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_table_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginTop="10.0dp"
                    android:text="@string/account"
                    android:textColor="#ff000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="8.0dp"
                    android:layout_marginTop="10.0dp"
                    android:background="@null"
                    android:hint="@string/hint_account"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dp"
                android:layout_marginRight="2.0dp"
                android:layout_marginTop="5.0dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_line" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:text="@string/password"
                    android:textColor="#ff000000"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="8.0dp"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="32"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/remember_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:button="@drawable/login_checkbox_selector"
                android:checked="true"
                android:text="@string/remember_account"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dp" >

            <Button
                android:id="@+id/login"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/common_btn_selector"
                android:text="@string/login"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/forget_password"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/login_bottom_btn_selector"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/register"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/login_bottom_btn_selector"
            android:gravity="center"
            android:text="@string/register_account"
            android:textSize="18.0sp" />
    </LinearLayout>

</RelativeLayout>