<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60.0dip"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_table_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8.0dp"
                android:layout_marginTop="10dp"
                android:text="@string/account_info"
                android:textColor="#4484B9"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginTop="10.0dp"
                    android:text="@string/set_account"
                    android:textColor="#ff000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="8.0dp"
                    android:layout_marginTop="10.0dp"
                    android:background="@null"
                    android:hint="@string/hint_account"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dp"
                android:layout_marginRight="2.0dp"
                android:layout_marginTop="5.0dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:text="@string/set_password"
                    android:textColor="#ff000000"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="8.0dp"
                    android:background="@null"
                    android:hint="@string/hint_set_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2.0dp"
                android:layout_marginRight="2.0dp"
                android:layout_marginTop="5.0dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:text="@string/password_confirm"
                    android:textColor="#ff000000"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8.0dp"
                    android:layout_marginRight="8.0dp"
                    android:background="@null"
                    android:hint="@string/hint_set_password_confirm"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_16" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/register_go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="已有账号，去登录"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/register_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bottom_btn_selector"
            android:text="@string/register"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>