<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lllayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/sec_color"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/service" />

            <TextView
                android:id="@+id/main_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/service"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:saveEnabled="false" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/recommend" />

            <TextView
                android:id="@+id/main_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recommend"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round"
            android:focusable="false"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/main_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round"
            android:focusable="false"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="3dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/my" />

            <TextView
                android:id="@+id/main_my"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/my"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />
        </LinearLayout>
    </LinearLayout>